Add places dialog

--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,13 @@
     <title>Food Manager</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- bootstrap css -->
-    <link href="//netdna.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet"
+        href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+  <!-- or the newer “Material Symbols Outlined” (Angular-Material 17 default) -->
+  <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined">
+
 </head>
 <body>
     <app>Loading...</app>
